# cpp_backend_undegrad_thesis

./: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  microservice.cbp  payload.h
CMake/: FindMES.cmake
MESlib/include/Elements/: TriangleElement.hpp
MESlib/include/Solver/: Solver.hpp
